k8s/all-apis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: all-apis-backend
  labels:
    app: all-apis-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: all-apis-backend
  template:
    metadata:
      labels:
        app: all-apis-backend
    spec:
      containers:
      - name: all-apis-backend
        image: ghcr.io/cs-muic/scalable-p1-khingxc/pastebin-backend:latest
