k8s/all-apis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: all-apis-backend
spec:
  selector:
    app: all-apis-backend
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  5000
