k8s/recents-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: recents-backend
spec:
  selector:
    app: recents-backend
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  5000
